# cupid-lang

./: .gitignore  CupidLang.js  cupid-lang-v2.cupid  cupid-lang.cupid  interpreter.py  package-lock.json  package.json  syntax.cupid  todo.md
cupid/: Cargo.toml  rustfmt.toml
cupid-analysis/: Cargo.toml
cupid-analysis/src/: ast.rs  block.rs  declaration.rs  expression.rs  function.rs  function_call.rs  ident.rs  implement.rs  lib.rs  property.rs  type_system.rs  value.rs
cupid-analysis/src/type_system/: inference.rs  method.rs  methods.rs  trait_definition.rs  traits.rs  type_definition.rs  type_of.rs  types.rs
cupid-ast/: Cargo.toml
cupid-ast/src/: analysis.rs  ast.rs  block.rs  builders.rs  create.rs  declaration.rs  diagnostics.rs  expression.rs  function.rs  function_call.rs  ident.rs  lib.rs  nodes.rs  scope.rs  to_ast.rs  type_system.rs  utils.rs  value.rs
cupid-ast/src/analysis/: ast.rs  attributes.rs  block.rs  declaration.rs  expression.rs  function.rs  function_call.rs  ident.rs  implement.rs  property.rs  scope.rs  type_definition.rs  type_system.rs  value.rs
cupid-ast/src/create/: nodes.rs  utils.rs  value.rs
cupid-ast/src/diagnostics/: display.rs  error_codes.rs  error_context.rs
cupid-ast/src/function/: signature.rs
cupid-ast/src/functions/: property.rs
cupid-ast/src/nodes/: attributes.rs  block.rs  builders.rs  declaration.rs  expression.rs  function.rs  function_call.rs  ident.rs  property.rs  type_system.rs  value.rs
cupid-ast/src/scope/: closure.rs  context.rs  env.rs  globals.rs  scope.rs  single_scope.rs  symbol_value.rs  traceback.rs  use_scope.rs
cupid-ast/src/type_system/: const_types.rs  fields.rs  implement.rs  inference.rs  trait_definition.rs  traits.rs  type_definition.rs  types.rs  unification.rs
cupid-ast/src/utils/: get_methods.rs  type_of.rs  typed_untyped.rs
cupid/auto-implement/: Cargo.toml
cupid/auto-implement/src/: lib.rs
cupid/benches/: benchmarks.rs
cupid/cupid-analysis/: Cargo.toml
cupid/cupid-analysis/src/: ast.rs  block.rs  decl.rs  declaration.rs  expression.rs  function.rs  function_call.rs  ident.rs  lib.rs  property.rs  semantic_state.rs  symbol_value.rs  tests.rs  type_system.rs  value.rs
cupid/cupid-ast/: Cargo.toml
cupid/cupid-ast/src/: attr.rs  attributes.rs  block.rs  builders.rs  declaration.rs  diagnostics.rs  expr.rs  expression.rs  function.rs  function_call.rs  ident.rs  lib.rs  property.rs  scope.rs  stmt.rs  symbol_value.rs  type_system.rs  types.rs  utils.rs  value.rs
cupid/cupid-builder/: Cargo.toml
cupid/cupid-builder/src/: lib.rs  quick_build.rs
cupid/cupid-debug/: Cargo.toml
cupid/cupid-debug/src/: code.rs  context.rs  display.rs  error.rs  highlight.rs  hints.rs  lib.rs  message.rs  severity.rs  source.rs  tests.rs  to_err.rs
cupid/cupid-env/: Cargo.toml
cupid/cupid-env/src/: database.rs  environment.rs  expr_closure.rs  lib.rs  scope.rs
cupid/cupid-fmt/: Cargo.toml
cupid/cupid-fmt/src/: lib.rs  reindent.rs
cupid/cupid-interpret/: Cargo.toml
cupid/cupid-interpret/src/: lib.rs
cupid/cupid-lex/: Cargo.toml
cupid/cupid-lex/src/: errors.rs  lexer.rs  lib.rs  node.rs  span.rs  token.rs  token_iter.rs  tokenizer.rs
cupid/cupid-parse/: Cargo.toml
cupid/cupid-parse/src/: bin_op.rs  create.rs  generator.rs  lib.rs  parse.rs  parser.rs  parsers.rs  run.rs  tests.rs
cupid/cupid-passes/: Cargo.toml
cupid/cupid-passes/src/: env.rs  flow_checking.rs  lib.rs  linting.rs  name_resolution.rs  package_resolution.rs  pass.rs  pre_analysis.rs  scope_analysis.rs  tests.rs  type_checking.rs  type_inference.rs  type_name_resolution.rs  type_scope_analysis.rs  util.rs
cupid/cupid-scope/: Cargo.toml
cupid/cupid-scope/src/: closure.rs  context.rs  display.rs  env.rs  lib.rs  single_scope.rs  symbol_table.rs  trace.rs  traceback.rs  use_closure.rs  use_scope.rs
cupid/cupid-semantics/: Cargo.toml
cupid/cupid-semantics/src/: analyze_scope.rs  check_flow.rs  check_types.rs  infer_types.rs  lib.rs  lint.rs  resolve_names.rs  resolve_packages.rs  resolve_type_names.rs  tests.rs  utils.rs
cupid/cupid-trace/: Cargo.toml
cupid/cupid-trace/src/: lib.rs
cupid/cupid-transpile/: Cargo.toml
cupid/cupid-transpile/src/: lib.rs
cupid/cupid-types/: Cargo.toml
cupid/cupid-types/src/: infer.rs  lib.rs  unification.rs
cupid/cupid-util/: Cargo.toml
cupid/cupid-util/src/: bidirectional_iterator.rs  builder.rs  displays.rs  error_codes.rs  fmt.rs  invert_option.rs  lib.rs  map_mut.rs  node_builder.rs  strings.rs  table_fmt.rs
cupid/src/: _main.rs  arena.rs  chunk.rs  compiler.rs  error.rs  errors.rs  expose.rs  file_handler.rs  file_handler_refactor.rs  gc.rs  lib.rs  main.rs  objects.rs  packages.rs  parser.rs  parsing.rs  pointer.rs  repl.rs  run.rs  scanner.rs  semantics.rs  span.rs  table.rs  tests.rs  todo.md  token.rs  tokenizer.rs  tree.rs  ty.rs  type_system.rs  value.rs  vm.rs
cupid/src/analyze/: auto_impl.rs  infer.rs  mod.rs  pretty.rs  resolve.rs
cupid/src/archive/: expression.rs  lexer2.rs  macro_parser.rs  pratt.rs
cupid/src/ast/: array.rs  binop.rs  block.rs  break.rs  call.rs  class.rs  constant.rs  define.rs  expr.rs  fun.rs  get.rs  get_property.rs  get_super.rs  (+12 more)
cupid/tests/: integration.rs
cupid/trace/: Cargo.toml
(+958 files in other folders)
