[package]
name = "cupid_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
lazy_static = "1.4.0"
tabled = { version = "*", features = ["color"] }
colored = "2.0.0"

cupid_lex = { version = "0.1.0", path = '../cupid-lex' }
cupid_ast = { version = "0.1.0", path = '../cupid-ast' }
cupid_util = { version = "0.1.0", path = '../cupid-util' }