[package]
name = "cupid_ast"
version = "0.1.0"
edition = "2021"


[dependencies]
derive_more = "0.99.17"
lazy_static = "1.4.0"
tabled = { version = "*", features = ["color"] }
colored = "2.0.0"

cupid_lex = { version = "0.1.0", path = '../cupid-lex' }
cupid_parse = { version = "0.1.0", path = '../cupid-parse' }
cupid_util = { version = "0.1.0", path = '../cupid-util' }
