[package]
name = "cupid"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"cupid-ast",
	"cupid-debug",
	"cupid-env",
	"cupid-lex",
	"cupid-parse",
	"cupid-semantics",
	"auto-implement",
	"cupid-types",
	"cupid-util"
]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

cupid-ast = { path = 'cupid-ast' }
cupid-debug = { path = 'cupid-debug' }
cupid-env = { path = 'cupid-env' }
cupid-lex = { path = 'cupid-lex' }
cupid-parse = { path = 'cupid-parse' }
cupid_semantics = { path = 'cupid-semantics' }
auto-implement = { path = 'auto-implement' }
cupid-types = { path = 'cupid-types' }
cupid-util = { path = 'cupid-util' }