[package]
name = "cupid_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
cupid_ast = { path = '../cupid-ast' }
cupid_builder = { path = '../cupid-builder' }
cupid_debug = { path = '../cupid-debug' }
cupid_scope = { path = '../cupid-scope' }
cupid_trace = { path = '../cupid-trace' }
cupid_util = { path = '../cupid-util' }