[package]
name = "cupid-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
derive_more = "0.99.17"
textwrap = "0.15"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }

cupid-ast = { path = '../cupid-ast' }
cupid-lex = { path = '../cupid-lex' }
cupid-util = { path = '../cupid-util' }