[package]
name = "cupid-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
cupid-lex = { path = '../cupid-lex' }
cupid-ast = { path = '../cupid-ast' }
cupid-debug = { path = '../cupid-debug' }
cupid-env = { path = '../cupid-env' }
cupid-util = { path = '../cupid-util' }