[package]
name = "cupid_semantics"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-implement = { path = '../auto-implement' }
cupid_ast = { path = '../cupid-ast' }
cupid_env = { path = '../cupid-env' }
cupid_lex = { path = '../cupid-lex' }
cupid_parse = { path = '../cupid-parse' }
cupid_types = { path = '../cupid-types' }
cupid_util = { path = '../cupid-util' }